# ppt-studio-codex

./: .gitignore  AGENTS.md  Untitled.md  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts
python-backend/: README.md  pyproject.toml
python-backend/.validation-data/project-crud/: ppt_studio.db
python-backend/app/: __init__.py  config.py  logging.py  main.py
python-backend/app/agents/: __init__.py  file_analyzer.py  graph.py  llm.py  orchestrator.py  page_generator.py  page_optimizer.py  planner.py  state.py
python-backend/app/api/: agent.py  chat.py  export.py  files.py  health.py  pages.py  projects.py  router.py  settings.py  themes.py
python-backend/app/db/: __init__.py  base.py  database.py
python-backend/app/models/: __init__.py  chat_message.py  enums.py  project.py  project_page.py  setting.py  uploaded_file.py
python-backend/app/parsers/: __init__.py  base.py  csv_parser.py  excel_parser.py  image_parser.py  pdf_parser.py  (+5 more)
python-backend/data/: ppt_studio.db
python-backend/tests/: __init__.py  conftest.py  sample_files.py  test_agent_api.py  test_chat_api.py  test_chat_service.py  test_export_api.py  test_file_service.py  test_files_api.py  test_llm_runtime.py  test_orchestrator.py  test_page_generator.py  test_page_optimizer.py  test_page_service.py  test_pages_api.py  test_parsers.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_planner.py  test_settings_api.py  test_sse_manager.py  test_theme_api.py  test_theme_service.py  test_thumbnail_service.py
(+143 files in other folders)
