[project]
name = "ppt-studio-python-backend"
version = "0.1.0"
description = "FastAPI sidecar backend for PPT Studio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "pydantic>=2.9,<3.0",
    "loguru>=0.7,<1.0",
    "sse-starlette>=2.1,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "aiofiles>=24.1,<25.0",
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
    "python-docx>=1.1,<2.0",
    "pymupdf>=1.24,<2.0",
    "python-pptx>=1.0,<2.0",
    "pillow>=11.0,<12.0",
    "langgraph>=0.2,<1.0",
    "langchain>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "litellm>=1.60,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.28,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
